<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Mongolduu</string>
    
    <string name="search_hint">Artist or song name</string>
    
    <string name="news_activity_title">News</string>
    <string name="search_activity_title">Search</string>
    <string name="chart_activity_title">Chart</string>
    <string name="info_activity_title">Info</string>
    <string name="settings_activity_title">Settings</string>
    <string name="playlist_activity_title">Playlist</string>
    <string name="pick_song_activity_title">Pick Song</string>
    
    <string name="chart_type_today">Today</string>
    <string name="chart_type_week">This Week</string>
    <string name="chart_type_alltime">Alltime</string>
    <string name="chart_type_new">New</string>
	
	<string name="search_more">show next %1$d results</string>
	<string name="search_nomore">no more results</string>
	<string name="search_nothing">no results found</string>
	
	<string name="news_date_format">yyyy.MM.dd</string>
	
	<string name="news_more">show next %1$d news</string>
	<string name="news_nomore">no more news available</string>
	<string name="news_nothing">no news available</string>
	
	<string name="news_minute_old">minute ago</string>
	<string name="news_minutes_old">minutes ago</string>
	<string name="news_hour_old">hour ago</string>
	<string name="news_hours_old">hours ago</string>
	<string name="news_day_old">day ago</string>
	<string name="news_days_old">days ago</string>
	<string name="news_month_old">month ago</string>
	<string name="news_months_old">months ago</string>
	
	<string name="news_notification_ticker">Mongolduu news received</string>
	<string name="news_notification_title">Mongolduu news</string>
	
	<string name="network_problem">network problem</string>
	
	<string name="home_btn_news">News</string>
	<string name="home_btn_search">Search</string>
	<string name="home_btn_chart">Chart</string>
	<string name="home_btn_playlist">Playlist</string>
	<string name="home_btn_info">Info</string>
	<string name="home_btn_settings">Settings</string>
	
	<string name="context_menu_home">Home</string>
	<string name="context_menu_search">Search</string>
	<string name="context_menu_refresh">Refresh</string>
	<string name="context_menu_add_playlist">Create Playlist</string>	
	<string name="context_menu_remove_playlist">Delete Playlist</string>
	<string name="context_menu_add_song_into_playlist">Add Song</string>
	<string name="context_menu_remove_song_from_playlist">Remove from Playlist</string>
	<string name="context_menu_remove_song_from_device">Delete from Device</string>
	<string name="context_menu_playlist">Playlist</string>
	<string name="context_menu_download">Download</string>
	<string name="context_menu_play_playlist">Play Songs</string>
	<string name="context_menu_play_song">Play Song</string>
	<string name="context_menu_set_as_ringtone">Set as Ringtone</string>
	
	<string name="download_dialog_title">Do you want download this song?</string>
	<string name="downloading_dialog_title">Downloading Song</string>
	
	<string name="alert_dialog_title">Error</string>
	<string name="alert_dialog_message_nosdcard">No SD card mounted!</string>
	<string name="alert_dialog_message_nospace">SD card hasn\'t enough capacity!</string>
	<string name="alert_dialog_message_unknown">Unknown error occured!</string>
	<string name="alert_dialog_message_download_failed">Song download failed! Try again!</string>
	<string name="alert_dialog_message_database_error">Database error occured!</string>
	<string name="alert_dialog_message_playlist_name_empty">You should input a valid name!</string>
	<string name="alert_dialog_message_playlist_already_exists">Playlist with the same name already exists!</string>
	<string name="alert_dialog_message_play_error">Error occured during playback!</string>
	
	<string name="toast_message_download_ok">Song download successful.</string>
	<string name="toast_message_download_cancelled">Song download cancelled!</string>
	<string name="toast_message_already_downloaded">Song already downloaded.</string>
	<string name="toast_message_song_removed_from_playlist">Song removed from playlist.</string>
	<string name="toast_message_song_removed_from_device">Song removed from device.</string>
	<string name="toast_message_song_added_into_playlist">Song added into playlist.</string>
	<string name="toast_message_empty_playlist">Empty playlist.</string>
	<string name="toast_message_set_as_ringtone">Ring tone changed successful.</string>
	
	<string name="progress_dialog_set_as_ringtone">Setting as ring tone...</string>
	
	<string name="button_ok">OK</string>
	<string name="button_cancel">Cancel</string>
	<string name="button_close">Close</string>
	
	<string name="playlist_all">All Songs</string>
	<string name="playlist_dialog_title">New Playlist</string>
	<string name="playlist_dialog_hint">Playlist name</string>
	
	<string name="playlist_all_empty">No song found! Download a song, please.</string>
	<string name="playlist_empty">No song found! Add a song, please.</string>
	<string name="pick_song_empty">No song found!</string>
	
	<string name="settings_language">Language</string>
	<string name="settings_language_description">English or Mongolian</string>
	<string name="settings_language_english">English</string>
	<string name="settings_language_mongolian">Mongolian</string>
	
	<string name="settings_notification">Notification</string>
	<string name="settings_notification_description">Enable/Disable the news notification.</string>
</resources>
