<?xml version="1.0" encoding="utf-8"?>
		
<com.google.android.apps.iosched.ui.widget.DashboardLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">

	<Button
		android:id="@+id/home_btn_news"
		android:text="@string/home_btn_news"
		style="@style/DashboardButton"
		android:drawableTop="@drawable/home_btn_news" />
	<Button
		android:id="@+id/home_btn_search"
		android:text="@string/home_btn_search"
		style="@style/DashboardButton"
		android:drawableTop="@drawable/home_btn_search" />
	<Button
		android:id="@+id/home_btn_chart"
		android:text="@string/home_btn_chart"
		style="@style/DashboardButton"
		android:drawableTop="@drawable/home_btn_chart" />
	<Button
		android:id="@+id/home_btn_playlist"
		android:text="@string/home_btn_playlist"
		style="@style/DashboardButton"
		android:drawableTop="@drawable/home_btn_playlist" />
	<Button
		android:id="@+id/home_btn_settings"
		android:text="@string/home_btn_settings"
		style="@style/DashboardButton"
		android:drawableTop="@drawable/home_btn_settings" />
	<Button
		android:id="@+id/home_btn_info"
		android:text="@string/home_btn_info"
		style="@style/DashboardButton"
		android:drawableTop="@drawable/home_btn_info" />
		
</com.google.android.apps.iosched.ui.widget.DashboardLayout>
