<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
   	<HorizontalScrollView
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_gravity="center_horizontal"
    	>
    	<LinearLayout
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    >
			<com.makeramen.segmented.SegmentedRadioGroup
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_margin="5dip"
				android:orientation="horizontal"
				android:layout_gravity="center"
				android:id="@+id/chart_type_radiogroup"
				android:checkedButton="@+id/chart_type_today">
				<RadioButton android:id="@id/chart_type_today"
					android:minWidth="100dip"
					android:minHeight="33dip"
					android:text="@string/chart_type_today"
					android:layout_weight="1"
					android:layout_gravity="center"
					android:textAppearance="?android:attr/textAppearanceSmall"
					android:button="@null"
					android:gravity="center"
					android:textColor="@color/radio_colors" />
				<RadioButton android:id="@+id/chart_type_week"
					android:minWidth="100dip"
					android:minHeight="33dip"
					android:text="@string/chart_type_week"
					android:layout_weight="1"
					android:layout_gravity="center"
					android:button="@null"
					android:gravity="center"
					android:textAppearance="?android:attr/textAppearanceSmall"
					android:textColor="@color/radio_colors" />
				<RadioButton android:id="@+id/chart_type_alltime"
					android:minWidth="100dip"
					android:minHeight="33dip"
					android:text="@string/chart_type_alltime"
					android:layout_weight="1"
					android:layout_gravity="center"
					android:button="@null"
					android:gravity="center"
					android:textAppearance="?android:attr/textAppearanceSmall"
					android:textColor="@color/radio_colors" />
				<RadioButton android:id="@+id/chart_type_new"
					android:minWidth="100dip"
					android:minHeight="33dip"
					android:text="@string/chart_type_new"
					android:layout_weight="1"
					android:layout_gravity="center"
					android:button="@null"
					android:gravity="center"
					android:textAppearance="?android:attr/textAppearanceSmall"
					android:textColor="@color/radio_colors" />
			</com.makeramen.segmented.SegmentedRadioGroup>
		</LinearLayout>
	</HorizontalScrollView>
    		
	<ListView
		android:id="@+id/list"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"/>
</LinearLayout>
